src/test/deca/syntax/valid/sansObjet/sansObjetComplexe.deca
// Description:
//    Programme utilisant print,while,if.
//
// Resultats:
//    if
//    elseIf
//    else
//    while
// Historique:
//    cree le 12/01/2024
{
    String a = "anass";
    boolean t = true ;
    int n = 3;
    int m;
    if ((t && n > 0) || true ){
        m = 5;
        print("n est positif");
        println("m = 5");
    }
    else if(n < 0){
        while(t){
            m = n;
            n = n+1;
        }
        m = -5 ;
        print("n est négatif");
        print("m = -5");
        }
        else {
            print("n est nulle");
            println("fin de if_then_else");
            m = 0;
        }
    while((t && n >= 0) || true){
        m = m + 1;
        if( m ==0){
            print("m est nulle");
            println("if1");
        }
        else if(m ==1){
            print("m = 1");
            println("if2");
        }
        else {
            printx("m != 0 & m!= 1");
            printlnx("else");
        }
    }

}