src/test/deca/syntax/invalid/sansObjet/incompleteElse.deca
// Description:
//    test de programme incorrect syntaxiquement (syntaxe if else incorrecte)
//
// Resultats:
//    ligne 13 : Erreur, missing '}' at 'else'
//
// Historique:
//    cree le 01/01/2024

{int a =3;
if(a>2){
print("hello world");
else{print("hi");
}